--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,16 @@
 </head>
 <body>
     <h1><%= title %></h1>
-    <p>This is your basic Express app using EJS!</p>
+    <ul>
+        <% messages.forEach((message, index) => { %>
+            <li>
+                <strong>User:</strong> <%= message.user %><br>
+                <strong>Message:</strong> <%= message.text %><br>
+                <strong>Added on:</strong> <%= message.added.toLocaleString() %><br>
+                <a href="/message/<%= index %>">Open</a>
+            </li>
+        <% }); %>
+    </ul>
+    <a href="/new">Add a new message</a>
 </body>
 </html>
